force-app/main/default/objects/DWCalendarMonth__c/DWCalendarMonth__c.object-meta.xml
<CustomObject>
    <label>DWCalendarMonth</label>
    <nameField>
        <label>DWCalendarMonths Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DWCalendarMonths</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>