force-app/main/default/objects/DWCalendarMonth__c/fields/CALENDAR_MONTH_KEY__c.field-meta.xml
<CustomField>
    <fullName>CALENDAR_MONTH_KEY__c</fullName>
    <externalId>true</externalId>
    <label>CALENDAR_MONTH_KEY</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>