force-app/main/default/objects/DWCalendarMonth__c/fields/MONTH_OF_YEAR__c.field-meta.xml
<CustomField>
    <fullName>MONTH_OF_YEAR__c</fullName>
    <label>MONTH_OF_YEAR</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>