force-app/main/default/objects/DWCalendarMonth__c/fields/YEAR_MONTH__c.field-meta.xml
<CustomField>
    <fullName>YEAR_MONTH__c</fullName>
    <label>YEAR_MONTH</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>