force-app/main/default/objects/DWCalendarMonth__c/fields/YEAR_VALUE__c.field-meta.xml
<CustomField>
    <fullName>YEAR_VALUE__c</fullName>
    <label>YEAR_VALUE</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>